# adaptive-ipsec-overlay-android

./: .gitignore  README.md  README.ru.md  STATUS.md  build-android-apk.ps1  build-native-core.ps1  build.gradle.kts  settings.gradle.kts
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/ru/adaptive/overlay/: MainActivity.kt  NativeCryptoBridge.kt  OverlayModels.kt  OverlayViewModel.kt
app/src/main/java/ru/adaptive/overlay/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
artifacts/: live-proof-2026-06-14.txt
native-core/: ANDROID-NDK.md  Cargo.toml  JNI.md  README.md
native-core/src/: ffi.rs  lib.rs  protocol.rs
